Adding common js to header file to open responsive popup

--- a/application/header.html
+++ b/application/header.html
@@ -5,7 +5,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="css/header.css">
+
    <link href="css/style.css" rel="stylesheet">
+   
    <title>Header</title>
    <script
 		src="https://code.jquery.com/jquery-3.3.1.js"
@@ -116,3 +118,4 @@ function HideLoginModal()
 	$('#loginModal').hide();
 }
 </script>
+<script src="plugins/common/common.min.js"></script>
